--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.agriculturalmachinery.views.Test</mainClass>
+                    <mainClass>com.agriculturalmachinery.views.MainFrame</mainClass>
                 </configuration>
             </plugin>
         </plugins>
